# oreilly-tui

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
cli/: simple_tui.py  tui.py
core/: __init__.py  http_client.py  kernel.py  text_extractor.py  types.py
plugins/: __init__.py  assets.py  auth.py  base.py  book.py  chapters.py  chunking.py  downloader.py  epub.py  html_processor.py  json_export.py  markdown.py  output.py  pdf.py  plaintext.py  system.py  token.py
plugins/pdf_styles/: print.css
utils/: __init__.py  files.py
web/: server.py
web/static/: app.js  index.html  style.css
