[project]
name = "oreilly-downloader"
version = "0.1.0"
description = "O'Reilly book ingest tool - Export books to LLM-ready formats"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.14.3",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "idna==3.11",
    "lxml==6.0.2",
    "markdownify==1.2.2",
    "requests==2.32.5",
    "six==1.17.0",
    "soupsieve==2.8.1",
    "tiktoken>=0.5.0",
    "textual>=0.50.0",
    "typing_extensions==4.15.0",
    "urllib3==2.6.2",
    "weasyprint>=60.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["black"]

[tool.setuptools]
py-modules = ["core", "plugins", "web", "utils", "config", "main"]
